# my-marketing-crew

./: .env  README.md  agents.py  app.py  brand_and_customer_analysis.md  content_and_campaign_plan.md  crm_analysis.md  date_utils.py  marketing_strategy.md  pyproject.toml  requirements.txt  tasks.py
tools/: search_tools.py
