[tool.poetry]
name = "my-marketing-crew"
version = "0.1.0"
description = ""
authors = ["ranveer0323 <ranawatranveer0323@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = "0.51.1"
crewai-tools = "0.8.3"
langchain = "0.2.14"
langchain-groq = "0.1.9"
groq = "0.9.0"
streamlit = "1.38.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
